--- a/index.html
+++ b/index.html
@@ -11,24 +11,28 @@
 </head>
 
 <body>
-    <div class="sidebar">
+    <section class="one">
         <input type="checkbox" id="check">
         <label for="check">
             <i class="fa-solid fa-bars-staggered" id="btn"></i>
             <i class="fa-solid fa-xmark" id="cencel"></i>
         </label>
-    </div>
-    <div class="sidebar_overall">
-        <header>SideBar</header>
-        <ul>
-            <li><a href="">Profile</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Help</a></li>
-        </ul>
-    </div>
+
+        <div class="sidebar_overall">
+            <div class="sidebar">
+                <header>Joyonto Kumar</header>
+                <ul>
+                    <li><a href="">Profile</a></li>
+                    <li><a href="">Skills</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Help</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
 
 
 </body>
