--- a/index.html
+++ b/index.html
@@ -33,7 +33,20 @@
         </div>
 
     </section>
+    <section class="two">
+        <div class="profile">
+            <h3>Hello , My Name is </h3>
+            <h1>JOYONTO KUMAR</h1>
+            <h2>And Iam a CSE Student (NUB)</h2>
+            <a type="submit" href="">Hire Me</a>
+        </div>
+        <div class="first_photo">
+            <img src="background.png" alt="">
 
+
+        </div>
+
+    </section>
 
 </body>
 
