--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
         <div class="sidebar_overall">
             <div class="sidebar">
-                <header>Joyonto Kumar</header>
+                <header><img src="my-bg (1).png" alt="">
+                    <h1>JOYONTO KUMAR</h1>
+                </header>
                 <ul>
                     <li><a href="">Profile</a></li>
                     <li><a href="">Skills</a></li>
@@ -42,12 +44,39 @@
         </div>
         <div class="first_photo">
             <img src="background.png" alt="">
+        </div>
+    </section>
+    <section class="third">
+        <p class="third_tittle">Scroll Down For More</p>
+        <div class="two_blogs">
+            <div class="mission">
+                <img src="misson.png" alt="">
+                <h1 class="tittle_two">Mission</h1>
+                <p class="para">MY Mission is Next Years I Complete Web development and also complete web design. Next,
+                    , Mission is
+                    Complete my graduation in CSE.</p>
 
+            </div>
+            <div class="goals">
+                <img src="Goals.png" alt="">
+                <h1 class="tittle_two">Goals</h1>
+                <p class="para">My goal as a developer is to further improve my knowledge about web development/Software
+                    development
+                    and
+                    become a Senior and up developer. That helps in my personal goals and earning more money.</p>
 
+            </div>
+        </div>
+    </section>
+    <section class="four">
+        <h1 class="last_tittle"> Contact</h1>
+        <div class="all_links">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
         </div>
 
     </section>
-
 </body>
 
 </html>
